Updated Button Functionality
+ Converted to using @string resources
+ Added a @TODO for button styling
+ Stated functionality of number-buttons in separate class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="ACSymbol">AC</string>
+    <string name="PlusSymbol">+</string>
+    <string name="MinusSymbol">-</string>
+    <string name="EqualsSymbol">=</string>
+    <string name="DivideSymbol">/</string>
+    <string name="MultiplySymbol">*</string>
+    <string name="PosNegSymbol">+-</string>
+    <string name="ModulusSymbol">%</string>
+    <string name="Num1">1</string>
+    <string name="Num2">2</string>
+    <string name="Num3">3</string>
+    <string name="Num4">4</string>
+    <string name="Num5">5</string>
+    <string name="Num6">6</string>
+    <string name="Num7">7</string>
+    <string name="Num8">8</string>
+    <string name="Num9">9</string>
+    <string name="Num0">0</string>
+    <string name="Period">.</string>
+
 </resources>
